# simple_music

./: .gitignore  CMakeLists.txt  FUNCTIONALITY_SUMMARY.md  README.md  USAGE.md  build.sh  main.cpp  test_simple
build_test/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  smp
include/: AppController.hpp  MusicPlayer.hpp  Playlist.hpp  UIHelpers.hpp
src/: AppController.cpp  MusicPlayer.cpp  Playlist.cpp  UIHelpers.cpp  main.cpp
